fix(design-system): change border color for better contrast

--- a/packages/design-system/src/styles.module.css
+++ b/packages/design-system/src/styles.module.css
@@ -3,7 +3,7 @@
 .test {
   margin: 2em;
   padding: 0.5em;
-  border: 2px solid #2535ae;
+  border: 2px solid #000000;
   font-size: 2em;
   text-align: center;
 }
